# fx-frontier

./: .gitignore  README.md  fx-frontier.html  fx_balance_sheet_tool.html  generate_fx_tool.py  pyproject.toml
src/: main.js  styles.css  template.html  worker.js
