[project]
name = "fx-balance-sheet-tool"
version = "0.1.0"
description = "FX balance sheet Monte Carlo tool — generates a standalone HTML simulator"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fx = "generate_fx_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["generate_fx_tool.py"]
